<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="action_about">About</string>

    <string name="app_name">Tic Tac Toe</string>
    <string name="first_human">You go first</string>
    <string name="turn_human">Your turn</string>
    <string name="turn_computer">Android\'s turn</string>
    <string name="turn_player_one">Player One\'s Turn</string>
    <string name="turn_player_two">Player Two\'s Turn</string>

    <string name="result_tie">It\'s a tie!</string>
    <string name="result_human_wins">You Won! \ Congrats</string>
    <string name="result_android_wins">Android Won! \ Good Try </string>
    <string name="result_player_one_wins">Player One Won! \ Congrats</string>
    <string name="result_player_two_wins">Player Two Won! \ Congrats</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="info">Information</string>
    <string name="human">You: </string>
    <string name="ties">Ties: </string>

    <string name="player_one">Player 1: </string>
    <string name="player_two">Player 2: </string>




    <string name="android">Android: </string>
    <string name="contact_heading">Contact Info</string>
    <string name="about_heading">About</string>
    <string name="about_info">Play the classic game of tic tac toe
    against your Android device or a friend. The game keeps
    track of the score for each session. If you wish
    to switch game modes simply click the return button
    on your device to return to the main menu.
    \n\n<b>Tablet Optimization Coming Soon!</b>
    \n\n<b>Name:</b> Nav
    \n<b>Email:</b> devnav55@gmail.com
    \n\nThank you for trying my game.
    \nFeel free to contact me with any feedback you may have.
    \nThank You Michael Meade for the guidance!
    </string>

    <string name="newGame_Label">New Game</string>
    <string name="menu_Label">Main Menu</string>





</resources>
